Updated Git repository URL

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>
                 This project was coded by
                 <a href="https://github.com/comfortibok/" target="_blank">Comfort Ibok</a> and is
-                <a href="#" target="_blank"> on GitHub</a> and
+                <a href="https://github.com/comfortibok/github-hosting-project" target="_blank"> on GitHub</a> and
                 <a href="#" target="_blank">hosted on Netlify</a>
             </p>
         </footer>
