--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 This project was coded by
                 <a href="https://github.com/comfortibok/" target="_blank">Comfort Ibok</a> and is
                 <a href="https://github.com/comfortibok/github-hosting-project" target="_blank"> on GitHub</a> and
-                <a href="#" target="_blank">hosted on Netlify</a>
+                <a href="https://stately-scone-80a5b0.netlify.app/" target="_blank">hosted on Netlify</a>
             </p>
         </footer>
     </div>
